# EE404_ECG

./: .gitignore  README.md  sdkconfig  sdkconfig.old
main/: .gitignore  CMakeLists.txt  ads1115.c  ads1115.h  idf_component.yml  spi_lcd_touch_example_main.c
main/ui/: ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
main/ui/components/: ui_comp_hook.c
main/ui/screens/: ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h  ui_Screen3.c  ui_Screen3.h
